<resources>
    <!-- activity_login.xml -->
    <string name="app_name" translatable="false">My Favorite Places</string>
    <string name="usr_name">username</string>
    <string name="usr_pw" translatable="false">password</string>
    <string name="hint_user">username</string>
    <string name="hint_pw" translatable="false">password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="intro_text">Save your favorite places when you travel</string>
    <!-- Toasts -->
    <string name="toast_wrong_password">Wrong password!</string>
    <string name="toast_user_inexistent">User not exist!</string>
    <string name="toast_user_exist">User already exist!</string>
    <string name="toast_user_created">User created!</string>
    <!-- activity_places.xml -->
    <string name="btn_logout">Logout</string>
    <string name="btn_addPlace">Add Place</string>
    <!-- activity_add_place.xml -->
    <string name="add_place_label">Add Place</string>
    <string name="hint_name">Name of place</string>
    <string name="hint_description">Description</string>
    <string name="btn_save">Save</string>
    <string name="places_label">Places</string>
    <string name="place_thumbnail">place_thumbnail</string>
    <string name="username_txt" translatable="false">TextView</string>
    <string name="single_place_label" translatable="false">Castelo de Beja</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_single_place1">Map</string>
    <!-- activity_single_place.xml -->
    <string name="btn_seeOnMap">See on map</string>
    <string name="title_activity_place_on_map">Map</string>
    <string name="hint_username">Username</string>
    <string name="hint_password" translatable="false">Password</string>

    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="location_not_found">Location Not found</string>
    <string name="give_permission">Dê permissão de localização nas configurações.</string>
    <string name="gps_toast">Ligue o GPS para poder submeter um local.</string>
    <string name="add_places_hint">Adicione os seus lugares favoritos.</string>
</resources>
