<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/add_place_label"
    tools:context=".AddPlaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_addPhoto"
            android:layout_width="match_parent"
            android:layout_height="251dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic[12]" />

        <ImageButton
            android:id="@+id/btn_takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnCameraClicked"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            app:srcCompat="@android:drawable/ic_menu_camera" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_place_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_description" />
            </android.support.design.widget.TextInputLayout>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_savePhoto"
            android:layout_width="match_parent"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:onClick="btnSaveClicked"
            android:text="@string/btn_save" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>